Fixed alignment for add match button on courts with no info

--- a/resources/css/sass/app.scss
+++ b/resources/css/sass/app.scss
@@ -32,3 +32,6 @@
         margin-bottom: 300px !important;
     }
 }
+.mt-30{
+    margin-top: 30px !important;
+}
